--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,7 +7,7 @@
     <link href="styles.css" rel="stylesheet">
     <title>Cool first webpage</title>
 </head>
-<body>
+<body class="works_on_smartphone">
      <header>
         <ul>
             <li> <a = href="index.html">Index</a></li>
