--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -10,7 +10,7 @@
 <body class="works_on_smartphone">
      <header>
         <ul>
-            <li> <a = href="index.html">Index</a></li>
+            <li> <a href="index.html">Index</a></li>
             <li> <a href= "tweets.html">Tweets</a></li>
         </ul>
     </header>
