Styled FAQ section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -250,7 +250,7 @@
     <footer class="footer">
         <section class="footer-container">
             <div class="footer">
-                <img src="assets/CSS Advanced/logo.png" alt="logo" class:"footer-logo">
+                <img src="assets/CSS Advanced/logo.png" alt="logo" class="footer-logo">
                 <div class="social-media">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
