--- a/headphones/7-index.html
+++ b/headphones/7-index.html
@@ -75,6 +75,7 @@
     <!-- WHAT WE DO -->
     <section class="what-we-do">
         <div class="container">
+            <h2 class="dark"> What we do...</h2>
             <div class="section-header">
                 <p class="section-description">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
@@ -122,6 +123,8 @@
 
     <section class="our-results">
         <div class="results-content-container">
+
+            <h2 class="light">Our results speak for themselves</h2>
 
             <p class="results-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
